@@ -1,3 +1,5 @@
+SUBDIRS = po
+
 INCLUDES = \
 	-I$(top_srcdir)	\
 	$(EVOLUTION_CFLAGS) \
@@ -20,8 +22,11 @@ EXTRA_DIST = \
 BUILT_SOURCES = signal-spam.eplug
 CLEANFILES = $(BUILT_SOURCES)
 
-%.eplug: %.eplug.xml
+%.eplug: %.eplug.in
 	sed -e 's|\@PLUGINDIR\@|$(plugindir)|'          \
 	-e 's|\@SOEXT\@|$(SOEXT)|'                      \
 	-e 's|\@GETTEXT_PACKAGE\@|$(GETTEXT_PACKAGE)|'  \
 	-e 's|\@LOCALEDIR\@|$(localedir)|' $< > $@
+
+%.eplug.in: %.eplug.xml
+	LC_ALL=C $(INTLTOOL_MERGE) -x -u /tmp $< $@
