@@ -1,7 +1,7 @@
 <Root>
   <commands>
-    <cmd name="SignalSpam" label="Report SPAM"
-      tip="Report this as SPAM to signal-spam"/>
+    <cmd name="SignalSpam" _label="Report SPAM"
+      _tip="Report this as SPAM to Signal Spam"/>
   </commands>
 
   <menu>
